# business-advisor

./: .env.example  Dockerfile  README.md  appspec.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: cache.py  config.py  db.py  llm.py  logging.py  main.py  prompts.py  search.py  utils.py  worker.py
app/agents/: action.py  base.py  discovery.py  peer.py  report.py  risk.py  structuring.py  workflow.py
app/models/: api.py  db.py  domain.py
app/prompts/: action_plan.yaml  discovery_extract.yaml  discovery_question.yaml  peer_classify.yaml  peer_respond.yaml  peer_summarize.yaml  report_summary.yaml  risk_analysis.yaml  structure_tree.yaml
scripts/: before_install.sh  start_application.sh  stop_application.sh  validate_service.sh
tests/: conftest.py  test_integration.py  test_unit.py
